--- a/netty-binary-decode/pom.xml
+++ b/netty-binary-decode/pom.xml
@@ -19,6 +19,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
