--- a/netty-fast-protocol/pom.xml
+++ b/netty-fast-protocol/pom.xml
@@ -19,6 +19,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openfast</groupId>
+            <artifactId>openfast</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
