--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.6</version>
             </dependency>
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>1.3.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
