--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>netty-http-server</module>
         <module>netty-group-chat</module>
         <module>netty-protobuf</module>
+        <module>netty-websocket-server</module>
         <module>netty-rpc</module>
         <module>netty-binary-decode</module>
         <module>netty-fast-protocol</module>
